k8s/senpy-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: senpy-latest
  labels:
    app: senpy-latest
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: senpy-latest
