k8s/senpy-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: senpy-ingress
spec:
  rules:
  - host: latest.senpy.cluster.gsi.dit.upm.es
    http:
      paths:
      - path: /
        backend:
          serviceName: senpy-latest
          servicePort: 5000
  - host: latest.senpy.gsi.upm.es
    http:
      paths:
      - path: /
        backend:
          serviceName: senpy-latest
          servicePort: 5000
